# fractal-client

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  alembic.ini  data.json  dummy_file.md  fractal.json  fractal.py  fractal_tasks_mock-0.0.1-py3-none-any.whl  gen_ref_pages.py  index.html  job.default.j2  luigi_wrap.py  mkdocs.yml  objects.inv  parser.py  pyproject.toml  slurm-223_0.out  template.fractal_server.env  test.json  test_apply.json  zensical.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_wheel.yml  ci.yml  documentation.yaml  pip_install.yml  poetry.yml  poetry_build.yml  poetry_update.yml  precommit.yml  project-management.yml  publish_pypi.yml  uv_audit.yaml  zizmor.yaml
.ipynb_checkpoints/: slurm-222_0-checkpoint.out
changelog/: index.html
client_tmp/tests/: conftest.py  test_project.py  test_workflow.py
development/: index.html
docs/: .gitignore  changelog.md  conf.py  development.md  doc-requirements.txt  extra.css  fractal.cmd.rst  gen_ref_pages.py  index.md  install.md  requirements.txt  versions.md
docs/_build/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
docs/apidoc_templates/: package.rst_t
docs/overrides/: 404.html
docs/scripts/: generate_cli_ref.py
docs/source/: changelog.rst  cli.rst  cli_dataset.rst  cli_job.rst  cli_project.rst  cli_register.rst  cli_task.rst  cli_version.rst  cli_workflow.rst  conf.py  contribute.md  fractal.rst  index.rst  install.md  src.rst  src.tasks.rst  src.wrappers.rst
docs/test_for_mkdocs/: generate_argparse_docs.py  parser.py
examples/: .gitignore  README.md  example_fmi_2_well_4x5_sites.sh  example_fmi_2_well_4x5_sites_illumination.sh  example_illumination.sh  example_uzh_10_well_5x5_sites.sh  example_uzh_1_well_2x2_sites.sh  example_uzh_1_well_2x2_sites_illumination.sh  example_uzh_1_well_2x2_sites_multifov.sh  example_uzh_1_well_6x6_sites.sh  example_uzh_1_well_9x8_sites.sh  example_uzh_1_well_9x8_sites_multifov.sh  example_uzh_1x1_well_2x2_sites.sh  example_uzh_1x1_well_6x6_sites.sh  example_uzh_23_well_9x8_sites.sh  example_uzh_2x2_well_2x2_sites.sh  example_uzh_4_well_2x2_sites.sh  example_uzh_4_well_2x2_sites_multifov.sh  wf_params_fmi_2_well_4x5_sites.json  wf_params_fmi_2_well_4x5_sites_channels.json  wf_params_fmi_2_well_4x5_sites_illumination.json  wf_params_uzh_10_well_5x5_sites.json  wf_params_uzh_1_well_2x2_sites.json  wf_params_uzh_1_well_2x2_sites_channels.json  wf_params_uzh_1_well_2x2_sites_illumination.json  wf_params_uzh_1_well_6x6_sites.json  wf_params_uzh_1_well_9x8_sites.json  wf_params_uzh_23_well_9x8_sites.json  wf_params_uzh_4_well_2x2_sites.json  wf_params_uzh_cardiac_channels.json
examples/00_dummy/: .fractal.env  (+1 more)
fractal/: .gitignore  README.md  __init__.py  __main__.py  authclient.py  client.py  config.py  dictionary_tasks.py  fractal_cmd.py  fractal_cmd_parsl.py  fractal_config.py  interface.py  job.default.j2  luigi_wrap.py  new.py  parser.py  parsl_config.py  regression_test.py  regression_test.sh  response.py  test.json  test_apply.json
fractal_client/: __init__.py  __main__.py  authclient.py  client.py  config.py  interface.py  parser.py  response.py
fractal_server/: __init__.py  __main__.py  config.py  config_runner.py  dependency_injection.py  main.py  syringe.py  utils.py
htmlcov/: class_index.html  d_16b0ec63f7be17f1___init___py.html  d_16b0ec63f7be17f1__validators_py.html  d_16b0ec63f7be17f1_applyworkflow_py.html  d_16b0ec63f7be17f1_manifest_py.html  d_16b0ec63f7be17f1_project_py.html  d_16b0ec63f7be17f1_state_py.html  d_16b0ec63f7be17f1_task_collection_py.html  d_16b0ec63f7be17f1_task_py.html  d_16b0ec63f7be17f1_user_py.html  d_16b0ec63f7be17f1_workflow_py.html  d_436a81546eab125d___init___py.html  d_436a81546eab125d__aux_task_caching_py.html  d_436a81546eab125d__dataset_py.html  d_436a81546eab125d__job_py.html  d_436a81546eab125d__project_py.html  d_436a81546eab125d__task_py.html  d_436a81546eab125d__user_py.html  d_436a81546eab125d__workflow_py.html  d_92138a6f38c0b542___init___py.html  d_92138a6f38c0b542_authclient_py.html  d_92138a6f38c0b542_client_py.html  d_92138a6f38c0b542_config_py.html  d_92138a6f38c0b542_interface_py.html  d_92138a6f38c0b542_parser_py.html  d_92138a6f38c0b542_response_py.html  d_95c096de1a979810___init___py.html  d_95c096de1a979810_authclient_py.html  d_95c096de1a979810_client_py.html  d_95c096de1a979810_config_py.html  d_95c096de1a979810_interface_py.html  d_95c096de1a979810_parser_py.html  d_95c096de1a979810_response_py.html  d_b7ca0247781cd0c1___init___py.html  d_b7ca0247781cd0c1__aux_task_caching_py.html  d_b7ca0247781cd0c1__dataset_py.html  d_b7ca0247781cd0c1__job_py.html  d_b7ca0247781cd0c1__project_py.html  d_b7ca0247781cd0c1__task_py.html  d_b7ca0247781cd0c1__user_py.html  (+41 more)
install/: index.html
jobs/: wftest_yokogawa_to_zarr80
scripts/: client.py  testserver.py
search/: search_index.json
server_tmp/: README.md  docker-slurm.yml  pyproject.toml
tasks/: 3Dyokogawa_tif_to_zarr.py  compression_tif.py  tif_to_zarr.py  yokogawa_tif_to_zarr.py
test2.zarr/: .zattrs
tests/: .gitignore  conftest.py  fixtures_server.py  fixtures_tasks.py  fixtures_testserver.py  run_test_server.sh  serve.sh  test_apply_worfklow.py  test_auth.py  test_backend_parsl.py  test_backend_parsl_executors.py  test_backend_process.py  test_backend_runners.py  test_cellpose.py  test_client.py  test_compression.py  test_conversion.py  test_dataset.py  test_db.py  test_db_models.py  test_fixtures.py  test_full_workflow.py  test_group.py  test_import_parsl_backend.py  test_invalid_commands.py  test_job.py  test_main.py  test_metadata_parsing.py  test_metadata_parsing_from_filename.py  test_no_commands.py  test_parsl.py  test_process_runner.py  test_process_workflow_backend_process.py  test_project.py  test_resource.py  test_resource_and_profile.py  test_runner_backends.py  test_task.py  test_task_api.py  test_task_collection.py  (+24 more)
tests/data/fractal-tasks-dummy/: pyproject.toml
versions/: index.html
wrappers/: conversionTaskWrap.py
(+437 files in other folders)
