[tool.poetry]
name = "fractal-client"
version = "2.4.0"
description = "Client component of the Fractal analytics platform"
authors = [
    "Tommaso Comparin <tommaso.comparin@exact-lab.it>",
    "Marco Franzon <marco.franzon@exact-lab.it>",
    "Jacopo Nespolo <jacopo.nespolo@exact-lab.it>",
]
readme = "README.md"
packages = [
    {include="fractal_client"}
]
homepage = "https://github.com/fractal-analytics-platform/fractal-client"
repository = "https://github.com/fractal-analytics-platform/fractal-client"
documentation = "https://fractal-analytics-platform.github.io/fractal-client"
license = "BSD-3-Clause"
exclude = [
"fractal_client/.gitignore",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/fractal-analytics-platform/fractal-client/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
PyJWT = "^2.8.0"
packaging = "^23.1"
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
bumpver = "^2022.1118"
coverage = {extras = ["toml"], version = "^6.5.0"}
fractal-server = { git = "https://github.com/fractal-analytics-platform/fractal-server.git", branch = "main" }


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.2"
mkdocs-material = "9.1.21"
mkdocs-literate-nav = "0.5.0"
mkdocs-gen-files = "0.4.0"
mkdocs-section-index = "0.3.5"
mkdocstrings = { extras = ["python"], version = "0.25.2" }
mkdocs-include-markdown-plugin = { version = "4.0.4", python = "^3.8,<3.12" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "2.4.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"fractal_client/__init__.py" = [
    '__VERSION__ = "{version}"$'
]

[tool.poetry.scripts]
fractal = "fractal_client.client:main"

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = ["tests/*"]


[[tool.mypy.overrides]]
module = ["devtools", "uvicorn", "pytest", "httpx", "fractal_server"]
ignore_missing_imports = true
