[project]
name = "fractal-client"
version = "2.9.1"
description = "Command-line client of the Fractal analytics platform"
authors = [
    { name="Tommaso Comparin", email="tommaso.comparin@exact-lab.it" },
    { name="Marco Franzon", email="marco.franzon@exact-lab.it" },
    { name="Yuri Chiucconi", email="yuri.chiucconi@exact-lab.it" },
    { name="Jacopo Nespolo", email="jacopo.nespolo@exact-lab.it" },
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv >=1.1.0,<1.2.0",
    "httpx >= 0.28.0, <0.29.0",
    "PyJWT >= 2.8.0,<3.0.0",
    "packaging >= 25.0.0, <26.0.0",

]

[project.scripts]
fractal = "fractal_client.client:main"

[project.urls]
homepage = "https://github.com/fractal-analytics-platform/fractal-client"
repository = "https://github.com/fractal-analytics-platform/fractal-client"
documentation = "https://fractal-analytics-platform.github.io/fractal-client"
changelog = "https://github.com/fractal-analytics-platform/fractal-client/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    {include="fractal_client"}
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.0"
pre-commit = ">=3.0.0,<4.0.0"
pytest = "^7.1.2"
pytest-randomly = "^3.15.0"
bumpver = "^2022.1118"
coverage = {extras = ["toml"], version = "^6.5.0"}
fractal-server = { git = "https://github.com/fractal-analytics-platform/fractal-server.git", branch = "main" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.2"
mkdocs-material = "9.1.21"
mkdocs-literate-nav = "0.5.0"
mkdocs-gen-files = "0.4.0"
mkdocs-section-index = "0.3.5"
mkdocstrings = { extras = ["python"], version = "0.25.2" }
mkdocs-include-markdown-plugin = { version = "4.0.4", python = "^3.8,<3.12" }

[tool.bumpver]
current_version = "2.9.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"fractal_client/__init__.py" = [
    '__VERSION__ = "{version}"$'
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = ["tests/*", "*/.venv/*"]

[tool.coverage.report]
omit = ["tests/*", "*/.venv/*"]

[tool.mypy.overrides]
module = ["devtools", "uvicorn", "pytest", "httpx", "fractal_server"]
ignore_missing_imports = true
