[project]
name = "fractal-client"
version = "2.10.0"
description = "Command-line client of the Fractal analytics platform"
authors = [
    { name="Tommaso Comparin", email="tommaso.comparin@exact-lab.it" },
    { name="Marco Franzon", email="marco.franzon@exact-lab.it" },
    { name="Yuri Chiucconi", email="yuri.chiucconi@exact-lab.it" },
    { name="Jacopo Nespolo", email="jacopo.nespolo@exact-lab.it" },
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv >=1.1.0,<1.2.0",
    "httpx >= 0.28.0, <0.29.0",
    "PyJWT >= 2.8.0,<3.0.0",
    "packaging >= 25.0.0, <26.0.0",

]

[project.scripts]
fractal = "fractal_client.client:main"

[project.urls]
homepage = "https://github.com/fractal-analytics-platform/fractal-client"
repository = "https://github.com/fractal-analytics-platform/fractal-client"
documentation = "https://fractal-analytics-platform.github.io/fractal-client"
changelog = "https://github.com/fractal-analytics-platform/fractal-client/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_client"]


[dependency-groups]
dev = [
    "devtools==0.12.2",
    "pre-commit>=3.0.0,<4.0.0",
    "pytest>=8.4.0,<8.5.0",
    "pytest-randomly==3.16.0",
    "bumpver>=2022.1118,<2023.0",
    "coverage[toml]>=7.10.0,<7.11.0",
    "fractal-server@git+https://github.com/fractal-analytics-platform/fractal-server.git@main",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.0",
    "mkdocs-material==9.6.15",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-section-index==0.3.10",
    "mkdocs-include-markdown-plugin==7.2.0",
]
[tool.bumpver]
current_version = "2.10.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"fractal_client/__init__.py" = [
    '__VERSION__ = "{version}"$'
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = ["tests/*", "*/.venv/*"]

[tool.coverage.report]
omit = ["tests/*", "*/.venv/*"]

[tool.mypy.overrides]
module = ["devtools", "uvicorn", "pytest", "httpx", "fractal_server"]
ignore_missing_imports = true
